feat: add splash screen

--- a/app.json
+++ b/app.json
@@ -7,9 +7,9 @@
     "icon": "./assets/icon.png",
     "userInterfaceStyle": "light",
     "splash": {
-      "image": "./assets/splash.png",
+      "image": "./assets/splitt-logo.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#F05221"
     },
     "assetBundlePatterns": [
       "**/*"
