--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.0",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
     "expo": "~50.0.4",
     "expo-font": "^11.10.2",
     "expo-status-bar": "~1.11.1",
