--- a/package.json
+++ b/package.json
@@ -10,19 +10,21 @@
   },
   "dependencies": {
     "@expo/ngrok": "^4.1.0",
+    "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
     "expo": "~50.0.4",
     "expo-camera": "^14.0.3",
+    "expo-checkbox": "~2.7.0",
     "expo-font": "^11.10.2",
+    "expo-image-manipulator": "~11.8.0",
     "expo-image-picker": "^14.7.1",
+    "expo-linear-gradient": "~12.7.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
-    "react-native": "0.73.2",
-    "expo-checkbox": "~2.7.0",
-    "expo-linear-gradient": "~12.7.1"
+    "react-native": "0.73.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
