--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
     "expo": "~50.0.4",
+    "expo-checkbox": "~2.7.0",
     "expo-font": "^11.10.2",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
-    "expo-checkbox": "~2.7.0"
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0",
+    "@expo/metro-runtime": "~3.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
