--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.2",
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0",
+    "@expo/metro-runtime": "~3.1.1"
     "react-native-animateable-text": "^0.11.0"
   },
   "devDependencies": {
